# turtlebot4_factory_inspection

./: CMakeLists.txt  Project.btproj  README.md  add_bt_node.sh  basepoint_saver.py  generate_source.sh  package.xml  sources.cmake  waypoint_saver.py
bt_nodes/: AdvanceIndex.cpp  CheckIfSetupDone.cpp  InitialSetup.cpp  IsArrivedAtBase.cpp  IsArrivedAtTarget.cpp  IsNoMoreTask.cpp  IsNomoreTask.cpp  MoveToTarget.cpp  ReturnToBase.cpp  SetAngle.cpp  SkipTarget.cpp  TakePhoto.cpp  WaitAfterPhoto.cpp  move_to_target.cpp
data/: base_location.yaml  waypoints.yaml
include/turtlebot4_factory_inspection/: AdvanceIndex.hpp  CheckIfSetupDone.hpp  InitialSetup.hpp  IsArrivedAtBase.hpp  IsArrivedAtTarget.hpp  IsNomoreTask.hpp  ReturnToBase.hpp  SetAngle.hpp  SkipTarget.hpp  TakePhoto.hpp
include/turtlebot4_factory_inspection/bt_nodes/: AdvanceIndex.hpp  CheckIfSetupDone.hpp  InitialSetup.hpp  IsArrivedAtBase.hpp  IsArrivedAtTarget.hpp  IsNoMoreTask.hpp  IsNomoreTask.hpp  MoveToTarget.hpp  ReturnToBase.hpp  SetAngle.hpp  SkipTarget.hpp  TakePhoto.hpp  WaitAfterPhoto.hpp
include/turtlebot4_factory_inspection/utils/: load_waypoints.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/turtlebot4_factory_inspection/include/turtlebot4_factory_inspection/: IsArrivedAtTarget.hpp
install/turtlebot4_factory_inspection/include/turtlebot4_factory_inspection/bt_nodes/: CheckIfSetupDone.hpp  InitialSetup.hpp  IsArrivedAtBase.hpp  IsNomoreTask.hpp  MoveToTarget.hpp  ReturnToBase.hpp  TakePhoto.hpp
install/turtlebot4_factory_inspection/include/turtlebot4_factory_inspection/utils/: load_waypoints.hpp
install/turtlebot4_factory_inspection/lib/turtlebot4_factory_inspection/: bt_runner
install/turtlebot4_factory_inspection/share/ament_index/resource_index/parent_prefix_path/: turtlebot4_factory_inspection
install/turtlebot4_factory_inspection/share/turtlebot4_factory_inspection/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtlebot4_factory_inspection/share/turtlebot4_factory_inspection/data/: base_location.yaml
install/turtlebot4_factory_inspection/share/turtlebot4_factory_inspection/trees/: main_tree.xml
log/: latest_build  latest_list
maps/: school_map.pgm  school_map.yaml
object/failed/: 0_failed.yaml  1_failed.yaml
src/: bt_runner.cpp
src/utils/: load_waypoints.cpp
trees/: main_tree copy.xml  main_tree.xml  test_tree.xml
